# makeyoururlmassivelymassive_rs

./: .gitignore  Cargo.toml
migrations/2019-12-06-233241_create_massive_urls/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
templates/: base.hbs  index.hbs  result.hbs
