[package]
name = "makeyoururlmassivelymassive"
version = "0.1.0"
authors = ["Olly Parton <mysticdragonfly@hotmail.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.3", features = ["postgres"] }
rocket = "0.4.2"
rust-crypto = "0.2.36"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["handlebars_templates", "diesel_postgres_pool"]
